Use lodash instead of a custom implementation

--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "url": "https://github.com/NativeScript/JustMeme"
   },
   "dependencies": {
+    "lodash": "^3.8.0",
     "marked": "^0.3.3",
     "nativescript-social-share": "^0.1.1"
   },
