--- a/src/package.json
+++ b/src/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-babel": "^5.1.0",
-    "gulp-jshint": "^1.10.0"
+    "gulp-jshint": "^1.10.0",
+    "gulp-watch": "^4.2.4"
   }
 }
